src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Automobile_Tag_Details_1__c</fullName>
        <label>Automobile Tag Details 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Automobile_Tag_Details_2__c</fullName>
        <label>Automobile Tag Details 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Automobile_Tag_Details_3__c</fullName>
        <label>Automobile Tag Details 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Installation_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installation Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Return_To_HQ__c</fullName>
        <label>Return To HQ</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shipment_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Shipment Account)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>Assignment_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Installation_Account__c</columns>
        <columns>Shipment_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>7/28/2022 12:00 AM</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>8/9/2022 12:00 AM</value>
        </filters>
        <label>Assignment Opportunities</label>
    </listViews>
</CustomObject>